@@ -38,13 +38,12 @@ set -e
 rcs_revision='$Revision$'
 rcs_version=`set - $rcs_revision; echo $2`
 program=`echo $0 | sed -e 's!.*/!!'`
-version="texi2dvi (GNU Texinfo 4.8) $rcs_version
+version="texi2dvi (GNU Texinfo 4.9) $rcs_version
 
 Copyright (C) 2007 Free Software Foundation, Inc.
-There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A
-PARTICULAR PURPOSE.  You may redistribute copies of GNU texinfo
-under the terms of the GNU General Public License.
-For more information about these matters, see the file named COPYING.
+License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
+This is free software: you are free to change and redistribute it.
+There is NO WARRANTY, to the extent permitted by law.
 "
 
 build_mode=${TEXI2DVI_BUILD_MODE:-local}
